SERVER-32690 Fix invariant failure in agg renamed paths optimization.